fixing the nav, still need to address the drop down menu flowing out of the visible area

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ canvas.whiteboard {
   top: 0px;
   bottom: 0px;
   left: 0px;
-  z-index: 100; /* Behind the navbar */
+  /*z-index: 100; /* Behind the navbar */
   padding: 0px;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
